GCC buildfix in Source/WebCore/svg/SVGToOTFFontConversion.cpp https://bugs.webkit.org/show_bug.cgi?id=154162

Reviewed by Andreas Kling.

* svg/SVGToOTFFontConversion.cpp:
(WebCore::SVGToOTFFontConverter::finishAppendingKERNSubtable):

Canonical link: https://commits.webkit.org/172258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196469 268f45cc-cd09-0410-ab3c-d52691b4dbfc